examples/bad/Syntax2.tn
# should be enclosed in a block

int x;
:
print x;
